--- a/src/main/resources/templates/inscripcion/inscripcion.html
+++ b/src/main/resources/templates/inscripcion/inscripcion.html
@@ -18,8 +18,8 @@
 					<div class="row align-items-center">
 						<div class="col-md-8">
 							<div class="page-header-title">
-								<h5 class="m-b-10">Crear Cursos</h5>
-								<p class="m-b-0">Registar nuevo Curso</p>
+								<h5 class="m-b-10">Crear Inscripcion</h5>
+								<p class="m-b-0">Registar nueva Inscripcion</p>
 							</div>
 						</div>
 						<div class="col-md-4">
@@ -28,7 +28,7 @@
 										class="fa fa-home"></i>
 								</a></li>
 								<li class="breadcrumb-item"><a href="#!">Catalogos</a></li>
-								<li class="breadcrumb-item"><a href="#!">Curso</a></li>
+								<li class="breadcrumb-item"><a href="#!">Inscripcion</a></li>
 							</ul>
 						</div>
 					</div>
@@ -43,8 +43,8 @@
 								<div class="col-sm-12">
 									<div class="card">
 										<div class="card-header">
-											<h5>Nuevo Curso</h5>
-											
+											<h5>Nueva Inscripcion</h5>
+
 											<div class="card-header-right">
 												<ul class="list-unstyled card-option">
 													<li><i class="fa fa-chevron-left"></i></li>
@@ -56,29 +56,26 @@
 											</div>
 										</div>
 										<div class="card-block">
-											<form th:action="@{/insertarcurso}" th:object="${nuevoCurso}"
-												class="form-material" method="post">
+											<form th:action="@{/insertarinscripcion}"
+												th:object="${nuevoInscripcion}" class="form-material"
+												method="post">
 												<div class="form-group form-default">
-													<input type="text" name="nombre" class="form-control"
-														th:field="*{nombre}" required> <span
-														class="form-bar"></span> <label class="float-label">Nombre</label>
+													<select class="form-select form-control" th:field="*{FkCurso.idCurso}"
+														aria-label="Default select example">
+														<option selected value="0">Cursos</option>
+														<option th:each="curso:${listaCursos}" th:value="${curso.idCurso}" th:text="${curso.nombre}"></option>
+													</select>
 												</div>
+												
 												<div class="form-group form-default">
-													<input type="text" name="descripcion"
-														th:field="*{descripcion}" class="form-control" required>
-													<span class="form-bar"></span> <label class="float-label">Descripción</label>
+													<select class="form-select form-control" th:field="*{fkEstudiante.idEstudiante}"
+														aria-label="Default select example">
+														<option selected value="0">Estudiantes</option>
+														<option th:each="estudiante:${listaEstudiantes}" th:value="${estudiante.idEstudiante}" th:text="${estudiante.nombre} +' '+ ${estudiante.apellido}"></option>
+													</select>
 												</div>
-												<div class="form-group form-default">
-													<input type="Date" name="fecha" class="form-control"
-														th:field="*{fechaRegistro}" required> <span
-														class="form-bar"></span>
-												</div>
+												
 
-												<div class="form-group form-default">
-													<input type="text" name="costo" class="form-control"
-														th:field="*{costo}" required> <span
-														class="form-bar"></span> <label class="float-label">Costo</label>
-												</div>
 												<div class="checkbox-fade fade-in-primary d-">
 													<label> <input type="checkbox" value=""
 														th:field="*{estado}"> <span class="cr"><i
@@ -90,7 +87,7 @@
 													<button type="submit" class="btn btn-primary">Guardar</button>
 												</div>
 
-												<input type="hidden" th:field="*{idCurso}">
+												<input type="hidden" th:field="*{idInscripcion}">
 											</form>
 										</div>
 									</div>
